Fix horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html,
 body {
+  overflow-x: hidden;
   min-width: 100vw;
   width: 100vw;
   margin: 0;
-  box-sizing: border-box;
   padding: 0;
 }
